# openfeature-aspire-sample

./: .gitignore  Directory.Build.props  Directory.Packages.props  Garage.slnx  README.md  WORKFLOW_FAILURE_ANALYSIS.md  aspire.config.json  skills-lock.json  state.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/agents/: agentic-workflows.agent.md
.github/aw/: actions-lock.json
.github/workflows/: agentics-maintenance.yml  ci-coach.lock.yml  ci-coach.md  ci.yml  copilot-setup-steps.yml  format.yml  repo-assist.lock.yml  repo-assist.md
Garage.AppHost/: Garage.AppHost.csproj  aspire.config.json
Garage.AppHost/Properties/: launchSettings.json
Todo.ApiService/: Todo.ApiService.csproj
Todo.AppHost/: Program.cs  Todo.AppHost.csproj
Todo.ServiceDefaults/: Extensions.cs  Todo.ServiceDefaults.csproj
Todo.Tests/: Todo.Tests.csproj
Todo.Web/: Todo.Web.csproj
badger/ofrep/: __init__.py  ofrep_client.py
src/Garage.ApiDatabaseSeeder/: ApiDbInitializer.cs  DatabaseSeederService.cs  DesignTimeDbContextFactory.cs  Garage.ApiDatabaseSeeder.csproj  Program.cs  Worker.cs  packages.lock.json
src/Garage.ApiModel/: Class1.cs  Garage.ApiModel.csproj  packages.lock.json
src/Garage.ApiService/: Garage.ApiService.csproj  Program.cs  packages.lock.json
src/Garage.ChatService/: main.py  prompt_loader.py  pyproject.toml  requirements.txt  test_main_utils.py  test_prompt_loader.py
src/Garage.ChatService/prompts/: brief.prompt.yml  casual.prompt.yml  expert.prompt.yml  unreliable.prompt.yml
(+76 files in other folders)
